--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '0.3'
+version: '0.1'
 
 services:
   db:
@@ -9,9 +9,10 @@ services:
     environment:
       MYSQL_ROOT_PASSWORD: root
       TZ: 'Asia/Tokyo'
-    command: mysqld --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci
     volumes:
     - ./docker/db/data:/var/lib/mysql
-    - ./docker/db/my.cnf:/etc/mysql/conf.d/my.cnf
+    - ./docker/init-sql:/docker-entrypoint-initdb.d
+    - ./docker/db/my.cnf:/etc/my.cnf
     ports:
       - '3306:3306'
+    tty: true
