--- a/docker/db/my.cnf
+++ b/docker/db/my.cnf
@@ -1,6 +1,9 @@
 [mysqld]
-character-set-server=utf8mb4
-collation-server=utf8mb4_unicode_ci
+character-set-server = utf8mb4
+collation-server = utf8mb4_unicode_ci
 
 [client]
-default-character-set=utf8mb4
+default-character-set = utf8mb4
+
+[mysql]
+default-character-set = utf8mb4
